# app_template

./: .gitignore  CLAUDE.md
axum_postgres/: CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  plan.md  progress.md  tasks.md
axum_postgres/apps/backend/: .env.example  Cargo.toml
axum_postgres/apps/backend/migrations/: 001_initial.sql
axum_postgres/apps/backend/src/: database.rs  docs.rs  error.rs  lib.rs  main.rs
axum_postgres/apps/backend/src/handlers/: health.rs  users.rs
axum_postgres/apps/backend/src/models/: user.rs
axum_postgres/apps/backend/src/repository/: user.rs
axum_postgres/apps/backend/tests/: api_integration_test.rs  user_repository_test.rs
axum_postgres/docs/: analysis_report.md  api_specification.md  database_schema.sql  environment_variables.md
axum_postgres/scripts/: check_db.sh  sync-types.sh
hono_postgres/: CLAUDE.md  README.md  package-lock.json  package.json
multi_agent_network/: .eslintrc.json  .gitignore  .prettierrc  README.md  package-lock.json  package.json  plan.md  tsconfig.json  vitest.config.ts
typescript_serverless/: .dockerignore  .env.example  .gitignore  .prettierrc  .quality-assurance-report-01-02.md  CLAUDE.md  Dockerfile  README.md  compose.yml  design.md  eslint.config.js  jest.config.base.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  prompt.md  quality-assurance-report.json  quality-assurance-report.md  requirements.md  security-audit-report.md  solid-principles-analysis.md  tasks.md  tsconfig.active.json  tsconfig.json  tsconfig.test.json
(+236 files in other folders)
